# meld

./: .bazelrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  clippy.toml  flake.nix  rivet.yaml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci-docs-stub.yml  ci.yml  compliance.yml  fixtures.yml  fuzz.yml  mythos-auto.yml  mythos-gate.yml  release.yml  verification-gate.yml
.rivet/: agent-context.md
docs/: arxiv-2604.13693-warpl-evaluation.md  multi-memory-lowering-contract.md  roadmap.md  verification-matrix.md  wasmtime-fact-reusability.md
docs/superpowers/plans/: 2026-03-15-resource-adapter-fixes.md  2026-03-16-3-component-borrow-forwarding.md  2026-03-17-remaining-resource-fixtures.md  2026-03-22-reexporter-detection-fix.md  2026-03-29-per-component-handle-tables.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/fuzz_parse_component/: crash-58e2560292606f3a49bde7edf9b939509a56cb32
fuzz/fuzz_targets/: fuzz_fusion_roundtrip.rs  fuzz_merger_idempotent.rs  fuzz_parse_component.rs  fuzz_resolver_terminates.rs
meld-cli/: BUILD.bazel  Cargo.toml
meld-cli/src/: main.rs
meld-core/: ARCHITECTURE.md  BUILD.bazel  Cargo.toml  README.md
meld-core/benches/: fusion_benchmarks.rs
meld-core/src/: abi_proofs.rs  address_strategy.rs  attestation.rs  component_wrap.rs  core_instance_topology.rs  custom_merge.rs  dwarf.rs  error.rs  lib.rs  mcu_dissolve.rs  memory_probe.rs  merger.rs  p3_async.rs  p3_bridge.rs  p3_stream.rs  parser.rs  provenance.rs  reloc.rs  resolver.rs  resource_graph.rs  rewriter.rs  segments.rs
meld-core/src/adapter/: call_lowering.rs  fact.rs  mod.rs
meld-core/tests/: adapter_dwarf_e2e.rs  adapter_safety.rs  async_cross_encoding.rs  auto_memory.rs  component_bare_export_355.rs  component_multi_interface_instance_idx.rs  component_provenance.rs  const_expr_globalget.rs  cross_component_call.rs  custom_sections_merge.rs  drop_realloc.rs  dwarf_passthrough.rs  dwarf_remap_witness.rs  dwarf_strip.rs  file_ops_validate.rs  golden_e2e.rs  issue_112_mythos_v04.rs  kani_merger.rs  kani_parser.rs  kani_resolver.rs  mcu_dissolve.rs  multi_memory.rs  multiply_instantiated_runtime.rs  nested_component.rs  osxcar_fusion.rs  p3_async_abi.rs  p3_async_lowering.rs  p3_bridge_runtime.rs  pic_extended_const_353.rs  proptest_fusion.rs  realloc_safety.rs  rebasing_end_to_end.rs  reftype_fidelity.rs  release_components.rs  runtime_from_exports.rs  runtime_intra_adapter.rs  segidx_remap.rs  shared_everything_topology.rs  wit_bindgen_runtime.rs
proofs/: BUILD.bazel  DECISIONS.md  PROOF_GUIDE.md  README.md  STATUS.md
proofs/adapter/: adapter.v
proofs/attestation/: attestation.v
proofs/merger/: merger.v
proofs/parser/: parser.v
proofs/resolver/: resolver.v
proofs/rewriter/: rewriter.v
proofs/rust_verified/: BUILD.bazel  README.md  index_map.rs  index_map_proofs.v  merger_core.rs  merger_core_proofs.v  resolver_core.rs  resolver_core_proofs.v
proofs/segments/: segments.v
proofs/spec/: BUILD.bazel  alias_spec.v  component_model.v  copy_layout_spec.v  fusion_spec.v  fusion_types.v  p1_adapter_spec.v  wasm_core.v  wasm_core_generated.v  wasm_semantics.v  wasm_spec_version.json
proofs/transformations/adapter/: BUILD.bazel  adapter_spec.v  copy_layout_proofs.v
proofs/transformations/merge/: BUILD.bazel  merge_bridge.v  merge_correctness.v  merge_defs.v  merge_layout.v  merge_remap.v  merge_resolution.v  merge_spec.v
proofs/transformations/resolve/: BUILD.bazel  resolve_spec.v
rules/: BUILD.bazel  meld.bzl  providers.bzl
safety/adr/: ADR-0.md  ADR-1-p3-async-lowering.md  ADR-2-p3-async-error-conventions.md  ADR-3-cross-component-stream-adapter.md  ADR-4-inter-component-isolation-model.md  ADR-5-aspice-tier-migration.md  ADR-6-shared-memory-address-relocation.md  ADR-7-abi-linking-strategy-architecture.md  schema.yaml
safety/requirements/: benchmarks.yaml  safety-requirements.yaml  sw-verifications.yaml  sys-verifications.yaml  system-requirements.yaml  traceability.yaml
safety/schema/: stpa.schema.json
safety/stpa/: control-structure-diagram.md  control-structure.yaml  controller-constraints.yaml  cross-toolchain-consistency.yaml  hazards.yaml  loss-scenarios.yaml  losses.yaml  resource-handle-stpa.yaml  rfc46-comparative-analysis.md  rfc46-hazards.yaml  system-constraints.yaml  ucas.yaml  weighted-gap-analysis.md
schemas/: meld-local.yaml
scripts/: gen-verification-matrix.py
scripts/explore/: HOWTO.md  emit.md  prototype.md  rank.md  validate.md
scripts/mythos/: HOWTO-gate.md  discover.md  emit.md  rank.md  validate.md
tests/osxcar/: README.md  build.sh  download.sh
tests/osxcar/wit/: antipinch.wit
tests/pic-fixtures/: shared_everything_linked.wasm
tests/reloc351/: README.md  a.wasm  b.wasm
tests/spec/: BUILD.bazel  README.md
tests/wit_bindgen/: BUILD.bazel  README.md  wit_bindgen.BUILD.bazel
tests/wit_bindgen/fixtures/compose/: build.sh  composed.wasm  consumer.wasm  consumer.wit  consumer_core.wat  provider.wasm  provider.wit  provider_core.wat
tests/wit_bindgen/fixtures/compose/consumer_wit/: app.wit
tools/: post_verification_comment.py  run_ls_verification.py
tools/spec-sync/: Cargo.toml
tools/spec-sync/src/: main.rs
verification/verus-pilot/: BUILD.bazel  Cargo.toml
verification/verus-pilot/src/: lib.rs
