[package]
name = "spec-sync"
version = "0.1.0"
edition = "2024"
description = "Generate Rocq specifications from WebAssembly spec reference interpreter"
publish = false

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization for tracking versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Regex for OCaml parsing
regex = "1.10"
