load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

package(default_visibility = ["//visibility:public"])

rocq_library(
    name = "adapter_spec",
    srcs = ["adapter_spec.v"],
    deps = [
        "//proofs/spec:wasm_core",
        "//proofs/spec:component_model",
        "//proofs/spec:fusion_spec",
    ],
    include_path = "MeldAdapter",
)

rocq_proof_test(
    name = "adapter_spec_test",
    deps = [":adapter_spec"],
    tags = ["manual", "proofs"],
)
