load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

package(default_visibility = ["//visibility:public"])

rocq_library(
    name = "merge_spec",
    srcs = ["merge_spec.v"],
    deps = [
        "//proofs/spec:wasm_core",
        "//proofs/spec:component_model",
        "//proofs/spec:fusion_spec",
    ],
    include_path = "MeldMerge",
)

rocq_proof_test(
    name = "merge_spec_test",
    deps = [":merge_spec"],
    tags = ["manual", "proofs"],
)
